--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,15 +4,218 @@
   | default @import url()
   |============================
 */
-/* Common styles */
-@import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
 
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+@import url('./reset.css');
+
+body {
+  font-family: "Montserrat", sans-serif;
+  color: #434455;
+  background-color: #FFFFFF;
+}
+
+img {
+  box-sizing: border-box;
+}
+
+section {
+  width: 100%;
+  max-width: 1440px;
+  box-sizing: border-box;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 32px;
+}
+
+.search-form-input {
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  color: #2E2F42;
+
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding: 0 16px;
+  box-sizing: border-box;
+}
+
+.search-form-input:hover {
+  border-radius: 4px;
+  border: 1px solid #000;
+}
+
+.search-form-input:active,
+.search-form-input:focus {
+  outline: none;
+  border-radius: 4px;
+  border: 1px solid #4E75FF;
+  color: #000
+}
+
+.search-form-button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  background: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.search-form-button:hover {
+  background: #6c8cff;
+}
+
+.gallery {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.gallery-item {
+
+  list-style: none;
+
+}
+
+.gallery-image {
+  width: 360px;
+  height: 200px;
+  position: absolute;
+  z-index: -1;
+
+}
+
+.large-img {
+  border: 1px solid #808080;
+  width: 360px;
+  height: 200px;
+}
+
+.modal img {
+  width: 1112px;
+  height: 640px;
+}
+
+.img-details {
+  height: 48px;
+  display: flex;
+  gap: 32px;
+  list-style-type: none;
+  padding-top: 4px;
+  justify-content: center;
+  box-sizing: border-box;
+  background: #FFFFFF;
+  position: relative;
+  top: 152px;
+}
+
+.img-details li :first-child {
+  color: #2E2F42;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.3;
+  letter-spacing: 0.04em;
+}
+
+.img-details li :last-child {
+  font-weight: 400;
+  line-height: 2;
+  color: #2E2F42;
+
+  font-size: 12px;
+  font-style: normal;
+  letter-spacing: 0.04em;
+}
+
+.img-details li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.btn-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+}
+.load-more {
+  border-radius: 8px;
+  margin-bottom: 20px;
+  width: 125px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  background: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  
+}
+
+.load-more:hover {
+  background: #6c8cff;
+}
+.loading-text{
+  color:#2E2F42;;
+  position: relative;
+  margin-top: 32px;
+  margin-bottom: 20px;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: none;
+  margin-top: 32px;
+  /* position: relative;
+  left: 50%; */
+  /* top: 60px; */
+  background: linear-gradient(0deg, rgba(255, 61, 0, 0.2) 33%, #ff3d00 100%);
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  
+  transform: translate(-50%, -50%);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: #263238;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg)
+  }
+
+  100% {
+    transform: rotate(360deg)
+  }
+}
